--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dokumentation</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Dokumentation</h1>
+    </header>
+    <main>
+        <h2>Meine Arbeiten aus dem Sommersemester 2025</h2>
+        <section class="projects">
+            <!-- Hier kommen später die Projekte rein -->
+        </section>
+    </main>
+</body>
+</html>
 
