--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
     <main>
         <h2>Meine Arbeiten aus dem Sommersemester 2025</h2>
         <section class="projects">
-            <!-- Hier kommen später die Projekte rein -->
+            <div class="project-card">
+                <h3>Teachable Machine</h3>
+                <p>Die Teachable Machine ist ein Programm von Google, das über Fotos, Sound oder Posen trainiert werden kann. Als Ergebnis kommt eine kleine selbst geschulte Künstliche Intelligenz heraus. Das Wissen dieser KI ist nur so groß, wie Input gegeben wurde. 
+Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenommen hat. Die Idee war, einen Scanner zu generieren, der erkennt, aus welcher Generation man kommt - und das mit einer Handgeste. Die Aufgabe für die Website Nutzenden ist es, ein Telefon gestisch darzustellen. Das Ergebnis wird in von mir festgelegten Kategorien eingeordnet: du bist von gestern, oder von heute.
+r</p>
+                <a href="https://hbk-bs.github.io/teachable-machine-ylva92">Zur Website</a>
+            </div>
+            <div class="project-card">
+                <h3>Nature of Code</h3>
+                <p>Unsere Exkursion nach Amrum hat uns viele Anreize zum Thema Nature of Code gegeben. Ein Naturphänomen grafisch darzustellen und die passenden Algorithmen zu finden, war durchaus eine Herausforderung. Ich hatte mir vorgenommen, das Aufbrechen des trockenen Sandes am Strand zu zeigen. Dieses sich ergebende, scheinbar keinen Regeln folgende Muster zu programmieren fiel mir sehr schwer.</p>
+                <a href="https://hbk-bs.github.io/nature-of-code-ylva92">Zur Website</a>
+            </div>
+            <div class="project-card">
+                <h3>Text the universal interface</h3>
+                <p>Die Künstliche Intelligenz nicht nur als Hilfe beim Programmieren zu nutzen, sondern sie zu etwas ganz neuem zu machen, war eine interessante Herausforderung. Die Grenzen und Möglichkeiten auszutesten und zu überlegen, was man denn im Alltag für eine KI gebrauchen kann. Da kam ich auf einen Zungenbrecher-Generator. Der Weg dahin führte über einen Austausch mit einer KI, die auf meine Vorgabe hin nur in Zungenbrechern antwortete. Nun kann sich jeder einen Buchstaben aussuchen und einen zufälligen Zungenbrecher generieren lassen.</p>
+                <a href="https://hbk-bs.github.io/text-the-universal-interface-ylva92">Zur Website</a>
+            </div>
+                        <div class="project-card">
+                <h3>Graphic Novel</h3>
+                <p>Mit der Aufgabe, eine Graphic Novel zu generieren, wurde ich das erste Mal mit der ausführlichen Bildgenerierung konfrontiert. Die richtigen Prompts zu verfassen ist eine Wissenschaft für sich. Beim Generieren kamen häufig Bilder heraus, die sehr unerwartet waren. In das Arbeiten mit Midjourney konnte ich mich recht gut einfinden.  
+Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete vorstellungen, was die einzelnen Panels darstellen sollten. Das machte das Generieren der Bilder schwerer und leichter zugleich. Es kann eine guter Prompt geschrieben werden, der das Bild beschreibt. Wenn die KI jedoch nicht unsere Vorstellungen verwirklichte, waren wir gefragt, genauere Angaben zu machen.
+</p>
+                <a href="https://hbk-bs.github.io/a-generative-graphic-novel-team-slym-shady">Zur Website</a>
+            </div>
         </section>
     </main>
 </body>
