--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@ Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete
             </div>
         </section>
     </main>
+    <footer>
+        <p>Ylva Beischall - Grundlagen der digitalen Kommunikation 2 - HBK Braunschweig</p>
+    </footer>
 </body>
 </html>
 
