--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenomm
             </div>
             <div class="project-card">
                 <h3>Nature of Code</h3>
+                <img src="" alt="Bild Nature of Code Projekt" class="project-image">
                 <p>Unsere Exkursion nach Amrum hat uns viele Anreize zum Thema Nature of Code gegeben. Ein Naturphänomen grafisch darzustellen und die passenden Algorithmen zu finden, war durchaus eine Herausforderung. Ich hatte mir vorgenommen, das Aufbrechen des trockenen Sandes am Strand zu zeigen. Dieses sich ergebende, scheinbar keinen Regeln folgende Muster zu programmieren fiel mir sehr schwer.</p>
                 <a href="https://hbk-bs.github.io/nature-of-code-ylva92">Zur Website</a>
             </div>
