--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@ Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenomm
             </div>
             <div class="project-card">
                 <h3>Nature of Code</h3>
-                <img src="" alt="Bild Nature of Code Projekt" class="project-image">
+                <img src="fuß im sand.jpeg" alt="Fuß im Sand auf Amrum" class="project-image">
                 <p>Unsere Exkursion nach Amrum hat uns viele Anreize zum Thema Nature of Code gegeben. Ein Naturphänomen grafisch darzustellen und die passenden Algorithmen zu finden, war durchaus eine Herausforderung. Ich hatte mir vorgenommen, das Aufbrechen des trockenen Sandes am Strand zu zeigen. Dieses sich ergebende, scheinbar keinen Regeln folgende Muster zu programmieren fiel mir sehr schwer.</p>
                 <a href="https://hbk-bs.github.io/nature-of-code-ylva92">Zur Website</a>
             </div>
             <div class="project-card">
                 <h3>Text the universal interface</h3>
+                <img src="fuß im sand.jpeg" alt="Fuß im Sand auf Amrum" class="project-image">
                 <p>Die Künstliche Intelligenz nicht nur als Hilfe beim Programmieren zu nutzen, sondern sie zu etwas ganz neuem zu machen, war eine interessante Herausforderung. Die Grenzen und Möglichkeiten auszutesten und zu überlegen, was man denn im Alltag für eine KI gebrauchen kann. Da kam ich auf einen Zungenbrecher-Generator. Der Weg dahin führte über einen Austausch mit einer KI, die auf meine Vorgabe hin nur in Zungenbrechern antwortete. Nun kann sich jeder einen Buchstaben aussuchen und einen zufälligen Zungenbrecher generieren lassen.</p>
                 <a href="https://hbk-bs.github.io/text-the-universal-interface-ylva92">Zur Website</a>
             </div>
