--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenomm
             </div>
             <div class="project-card">
                 <h3>Text the universal interface</h3>
-                <img src="fuß im sand.jpeg" alt="Fuß im Sand auf Amrum" class="project-image">
+                <img src="zungenbrecher 1.jpg" alt="Fuß im Sand auf Amrum" class="project-image">
                 <p>Die Künstliche Intelligenz nicht nur als Hilfe beim Programmieren zu nutzen, sondern sie zu etwas ganz neuem zu machen, war eine interessante Herausforderung. Die Grenzen und Möglichkeiten auszutesten und zu überlegen, was man denn im Alltag für eine KI gebrauchen kann. Da kam ich auf einen Zungenbrecher-Generator. Der Weg dahin führte über einen Austausch mit einer KI, die auf meine Vorgabe hin nur in Zungenbrechern antwortete. Nun kann sich jeder einen Buchstaben aussuchen und einen zufälligen Zungenbrecher generieren lassen.</p>
                 <a href="https://hbk-bs.github.io/text-the-universal-interface-ylva92">Zur Website</a>
             </div>
