--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@ Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenomm
             </div>
                         <div class="project-card">
                 <h3>Graphic Novel</h3>
+                <img src="ablauf-novel.jpg" alt="Fuß im Sand auf Amrum" class="project-image">
                 <p>Mit der Aufgabe, eine Graphic Novel zu generieren, wurde ich das erste Mal mit der ausführlichen Bildgenerierung konfrontiert. Die richtigen Prompts zu verfassen ist eine Wissenschaft für sich. Beim Generieren kamen häufig Bilder heraus, die sehr unerwartet waren. In das Arbeiten mit Midjourney konnte ich mich recht gut einfinden.  
 Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete vorstellungen, was die einzelnen Panels darstellen sollten. Das machte das Generieren der Bilder schwerer und leichter zugleich. Es kann eine guter Prompt geschrieben werden, der das Bild beschreibt. Wenn die KI jedoch nicht unsere Vorstellungen verwirklichte, waren wir gefragt, genauere Angaben zu machen.
 </p>
                 <a href="https://hbk-bs.github.io/a-generative-graphic-novel-team-slym-shady">Zur Website</a>
             </div>
+            
+            <div class="project-card">
+                <h3>Debate Club</h3>
+                <p>Ein Projekt, in dem zwei KIs miteinander in einen Austausch treten. Die Form des Austausches ist ein Streitgespräch. Die KIs haben unterschiedliche Rollen und Persönlichkeiten und diskutieren über ein vorgegebenes Thema. Der Austausch ist geprägt von den verschiedenen Charakteren und ihren jeweiligen Standpunkten.</p>
+                <a href="https://hbk-bs.github.io/debate-club-ylva92">Zur Website</a>
+            </div>
+
             <div class="project-card">
                 <h3>Reflexion</h3>
                 <p class="truncated-text">Das gesamte Semester ging sehr schnell vorbei. Es gab weniger, aber ausführlichere Projekte. Durch das Zusammenarbeiten mit der KI habe ich vieles erreichen können, was über mein Wissen hinausging. Gleichzeitig verstand ich aber auch immer mehr von dem, was mir da ausgespuckt wurde. Wichtig war dabei, sich den Code ab und zu einmal Schritt für Schritt erklären zu lassen, wodurch ich bei den späteren Projekten mehr verstand. Anfangs war das allgemeine Arbeiten mit Künstlicher Intelligenz eine Herausforderung. Mich darauf einzulassen und das Gefühl des Schummelns hinter mir zu lassen, fiel mir schwer.... <span class="read-more">↓ mehr lesen</span></p>
