--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete
             <div class="project-card">
                 <h3>Debate Club</h3>
                 <p>Ein Projekt, in dem zwei KIs miteinander in einen Austausch treten. Die Form des Austausches ist ein Streitgespräch. Die KIs haben unterschiedliche Rollen und Persönlichkeiten und diskutieren über ein vorgegebenes Thema. Der Austausch ist geprägt von den verschiedenen Charakteren und ihren jeweiligen Standpunkten.</p>
-                <a href="https://hbk-bs.github.io/debate-club-ylva92">Zur Website</a>
+            
+                <a href="debate club team 1.pdf">Zur Präsentation</a>
             </div>
 
             <div class="project-card">
