--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete
             
             <div class="project-card">
                 <h3>Debate Club</h3>
-                <p>Ein Projekt, in dem zwei KIs miteinander in einen Austausch treten. Die Form des Austausches ist ein Streitgespräch. Die KIs haben unterschiedliche Rollen und Persönlichkeiten und diskutieren über ein vorgegebenes Thema. Der Austausch ist geprägt von den verschiedenen Charakteren und ihren jeweiligen Standpunkten.</p>
+                <p>Debattiert wurde darüber, ob die voranschreitende Künstliche Intelligenz eine Gefahr oder eine Chance ist. Sollten strikte Maßnahmen im Bezug auf die Nutzung eingeleitet werden, oder sollte der Fokus auf Weiterbildung und Integration in den Alltag liegen? Zu einem klaren Schluss sind wir in unserer Debatte nicht gekommen. Zusammenfassend war das Ergebnis eine geteilte Meinung, eine Mischung aus den Pro Argumenten und aus denen dagegen. Die Nutzung von KI sollte nicht tabuisiert werden, sondern  
+auch schon früh, beispielsweise in den Schulen behandelt und darüber aufgeklärt werden.
+</p>
             
                 <a href="debate club team 1.pdf">Zur Präsentation</a>
             </div>
