--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete
 auch schon früh, beispielsweise in den Schulen behandelt und darüber aufgeklärt werden.
 </p>
             
-                <a href="debate club team 1.pdf">Zur Präsentation</a>
+                <a href="debate-club-team-con.pdf">Zur Präsentation</a>
             </div>
 
             <div class="project-card">
