--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete
                 <p>Debattiert wurde darüber, ob die voranschreitende Künstliche Intelligenz eine Gefahr oder eine Chance ist. Sollten strikte Maßnahmen im Bezug auf die Nutzung eingeleitet werden, oder sollte der Fokus auf Weiterbildung und Integration in den Alltag liegen? Zu einem klaren Schluss sind wir in unserer Debatte nicht gekommen. Zusammenfassend war das Ergebnis eine geteilte Meinung, eine Mischung aus den Pro Argumenten und aus denen dagegen. Die Nutzung von KI sollte nicht tabuisiert werden, sondern  
 auch schon früh, beispielsweise in den Schulen behandelt und darüber aufgeklärt werden.
 </p>
-            
-                <a href="debate-club-team-con.pdf">Zur Präsentation</a>
+                <a href="debate-club-team-con.pdf" target="_blank" rel="noopener">Zur Präsentation</a>
             </div>
 
             <div class="project-card">
