nach oben button

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ Im Großen und Ganzen habe ich viel gelernt, mir aber auch immer viele Fragen ge
         <p>Ylva Beischall - Grundlagen der digitalen Kommunikation 2 - HBK Braunschweig</p>
     </footer>
 
+    <a href="#" class="back-to-top">↑ Nach oben</a>
+    <script src="index.js"></script>
     <script>
         document.querySelectorAll('.read-more').forEach(button => {
             button.addEventListener('click', () => {
