--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenomm
             </div>
                         <div class="project-card">
                 <h3>Graphic Novel</h3>
-                <img src="ablauf-novel.jpg" alt="Fuß im Sand auf Amrum" class="project-image">
+                <img src="ablauf-novel-2.jpg" alt="Fuß im Sand auf Amrum" class="project-image">
                 <p>Mit der Aufgabe, eine Graphic Novel zu generieren, wurde ich das erste Mal mit der ausführlichen Bildgenerierung konfrontiert. Die richtigen Prompts zu verfassen ist eine Wissenschaft für sich. Beim Generieren kamen häufig Bilder heraus, die sehr unerwartet waren. In das Arbeiten mit Midjourney konnte ich mich recht gut einfinden.  
 Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete vorstellungen, was die einzelnen Panels darstellen sollten. Das machte das Generieren der Bilder schwerer und leichter zugleich. Es kann eine guter Prompt geschrieben werden, der das Bild beschreibt. Wenn die KI jedoch nicht unsere Vorstellungen verwirklichte, waren wir gefragt, genauere Angaben zu machen.
 </p>
@@ -65,9 +65,10 @@ Im Großen und Ganzen habe ich viel gelernt, mir aber auch immer viele Fragen ge
     </main>
     <footer>
         <p>Ylva Beischall - Grundlagen der digitalen Kommunikation 2 - HBK Braunschweig</p>
+        <a href="https://github.com/hbk-bs/documentation-2025-ylva92" class="github-link">GitHub Repository</a>
     </footer>
 
-    <a href="#" class="back-to-top">↑ Nach oben</a>
+    <a href="#" class="back-to-top">↑</a>
     <script src="index.js"></script>
     <script>
         document.querySelectorAll('.read-more').forEach(button => {
