--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <section class="projects">
             <div class="project-card">
                 <h3>Teachable Machine</h3>
+                <img src="teachable-machine.jpg" alt="Screenshot Teachable Machine Projekt" class="project-image">
                 <p>Die Teachable Machine ist ein Programm von Google, das über Fotos, Sound oder Posen trainiert werden kann. Als Ergebnis kommt eine kleine selbst geschulte Künstliche Intelligenz heraus. Das Wissen dieser KI ist nur so groß, wie Input gegeben wurde. 
-Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenommen hat. Die Idee war, einen Scanner zu generieren, der erkennt, aus welcher Generation man kommt - und das mit einer Handgeste. Die Aufgabe für die Website Nutzenden ist es, ein Telefon gestisch darzustellen. Das Ergebnis wird in von mir festgelegten Kategorien eingeordnet: du bist von gestern, oder von heute.
-</p>
+                   Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenommen hat. Die Idee war, einen Scanner zu generieren, der erkennt, aus welcher Generation man kommt - und das mit einer Handgeste. Die Aufgabe für die Website Nutzenden ist es, ein Telefon gestisch darzustellen. Das Ergebnis wird in von mir festgelegten Kategorien eingeordnet: du bist von gestern, oder von heute.</p>
                 <a href="https://hbk-bs.github.io/teachable-machine-ylva92">Zur Website</a>
             </div>
             <div class="project-card">
@@ -39,8 +39,7 @@ Ich habe meine Machine mit Bildern trainiert, die meine Webcam von mir aufgenomm
                 <h3>Graphic Novel</h3>
                 <img src="ablauf-novel-2.jpg" alt="Fuß im Sand auf Amrum" class="project-image">
                 <p>Mit der Aufgabe, eine Graphic Novel zu generieren, wurde ich das erste Mal mit der ausführlichen Bildgenerierung konfrontiert. Die richtigen Prompts zu verfassen ist eine Wissenschaft für sich. Beim Generieren kamen häufig Bilder heraus, die sehr unerwartet waren. In das Arbeiten mit Midjourney konnte ich mich recht gut einfinden.  
-Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete vorstellungen, was die einzelnen Panels darstellen sollten. Das machte das Generieren der Bilder schwerer und leichter zugleich. Es kann eine guter Prompt geschrieben werden, der das Bild beschreibt. Wenn die KI jedoch nicht unsere Vorstellungen verwirklichte, waren wir gefragt, genauere Angaben zu machen.
-</p>
+                   Unsere Geschichte entwickelte sich schnell, in meiner Gruppe hatten wir konkrete vorstellungen, was die einzelnen Panels darstellen sollten. Das machte das Generieren der Bilder schwerer und leichter zugleich. Es kann eine guter Prompt geschrieben werden, der das Bild beschreibt. Wenn die KI jedoch nicht unsere Vorstellungen verwirklichte, waren wir gefragt, genauere Angaben zu machen.</p>
                 <a href="https://hbk-bs.github.io/a-generative-graphic-novel-team-slym-shady">Zur Website</a>
             </div>
             
